--- a/platformio.ini
+++ b/platformio.ini
@@ -8,61 +8,31 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:mhetesp32minikit]
 platform = espressif32
-board = esp32dev
+board = mhetesp32minikit
 framework = arduino
 lib_deps =
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
-	bblanchon/ArduinoJson@^6.19.4
+        https://github.com/me-no-dev/ESPAsyncWebServer.git
+        bblanchon/ArduinoJson@^6.19.4
     https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+        khoih-prog/ESP32_New_TimerInterrupt@^1.5.0
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-; extra_scripts = upload.py
-; upload_protocol = custom
-; upload_url = http://192.168.178.50/update
+;board_build.f_cpu = 80000000L
+;board_build.f_cpu = 240000000L
 
-[env:esp32dev-ota]
-platform = espressif32
-board = esp32dev
-framework = arduino
-lib_deps =
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
-	bblanchon/ArduinoJson@^6.19.4
-    https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-monitor_speed = 115200
-; extra_scripts = upload.py
-; upload_protocol = custom
-; upload_url = http://192.168.0.114/update
 
-[env:d1_mini_pro]
-board = d1_mini_pro
-platform = espressif8266
-framework = arduino
-; build_type = debug
-monitor_filters = esp8266_exception_decoder
-lib_deps =
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
-	https://github.com/vshymanskyy/Preferences.git
-	bblanchon/ArduinoJson@^6.21.1
-monitor_speed = 115200
-; change MCU frequency
-board_build.f_cpu = 80000000L
-
-[env:d1_mini_pro-ota]
-board = d1_mini_pro
-platform = espressif8266
-framework = arduino
-; build_type = debug
-monitor_filters = esp8266_exception_decoder
-lib_deps =
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
-	https://github.com/vshymanskyy/Preferences.git
-	bblanchon/ArduinoJson@^6.21.1
-    https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-monitor_speed = 115200
-; extra_scripts = upload.py
-; upload_protocol = custom
-; upload_url = http://192.168.0.111//update
-; change MCU frequency
-board_build.f_cpu = 80000000L
+;;;[env:mhetesp32minikit-ota]
+;;;platform = espressif32
+;;;board = mhetesp32minikit
+;;;framework = arduino
+;;;lib_deps =
+;;;     https://github.com/me-no-dev/ESPAsyncWebServer.git
+;;;     bblanchon/ArduinoJson@^6.19.4
+;;;    https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+;;;     khoih-prog/ESP32_New_TimerInterrupt@^1.5.0
+;;;monitor_speed = 115200
+;;;extra_scripts = upload.py
+;;;upload_protocol = custom
+;;;upload_url = http://192.168.1.94/update
