--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ monitor_filters = esp32_exception_decoder
 ;board_build.f_cpu = 240000000L
 
 
-;;;[env:mhetesp32minikit-ota]
+[env:mhetesp32minikit-ota]
 ;;;platform = espressif32
 ;;;board = mhetesp32minikit
 ;;;framework = arduino
