--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ monitor_filters = esp32_exception_decoder
 
 
 [env:mhetesp32minikit-ota]
-;;;platform = espressif32
+platform = espressif32
 ;;;board = mhetesp32minikit
 ;;;framework = arduino
 ;;;lib_deps =
