--- a/platformio.ini
+++ b/platformio.ini
@@ -24,8 +24,8 @@ monitor_filters = esp32_exception_decoder
 ;board_build.f_cpu = 240000000L
 
 
-[env:mhetesp32minikit-ota]
-platform = espressif32
+;;;[env:mhetesp32minikit-ota]
+;;;platform = espressif32
 ;;;board = mhetesp32minikit
 ;;;framework = arduino
 ;;;lib_deps =
