--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ lib_deps =
         https://github.com/me-no-dev/ESPAsyncWebServer.git
         bblanchon/ArduinoJson@^6.19.4
         https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-        khoih-prog/ESP32_New_TimerInterrupt@^1.5.0
+ ;       khoih-prog/ESP32_New_TimerInterrupt@^1.5.0
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 ;board_build.f_cpu = 80000000L
