ajust pir timer frequency

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@
 platform = espressif32
 board = mhetesp32minikit
 framework = arduino
+board_build.partitions = minimal.csv
 lib_deps =
         https://github.com/me-no-dev/ESPAsyncWebServer.git
         bblanchon/ArduinoJson@^6.19.4
