change partition table

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,9 @@
 platform = espressif32
 board = mhetesp32minikit
 framework = arduino
-board_build.partitions = minimal.csv
+;;board_build.partitions = minimal.csv
+board_build.partitions = mhetmini.csv
+
 lib_deps =
         https://github.com/me-no-dev/ESPAsyncWebServer.git
         bblanchon/ArduinoJson@^6.19.4
