--- a/platformio.ini
+++ b/platformio.ini
@@ -9,36 +9,40 @@
 ; https://docs.platformio.org/page/projectconf.html
 ; format changes
 
-[env:mhetesp32minikit]
-platform = espressif32
-board = mhetesp32minikit
-framework = arduino
+;;;[env:mhetesp32minikit]
+;;;platform = espressif32
+;;;board = mhetesp32minikit
+;;;framework = arduino
 ;board_build.partitions = minimal.csv
-board_build.partitions = mhetmini.csv
-lib_deps =
-       https://github.com/me-no-dev/ESPAsyncWebServer.git
-       bblanchon/ArduinoJson@^6.19.4
-       https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-       cotestatnt/AsyncTelegram2@^2.2.3
-monitor_speed = 115200
-monitor_filters = esp32_exception_decoder
+;;;board_build.partitions = mhetmini.csv
+;;;lib_deps =
+;;;       https://github.com/me-no-dev/ESPAsyncWebServer.git
+;;;       bblanchon/ArduinoJson@^6.19.4
+;;;       https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+;;;       cotestatnt/AsyncTelegram2@^2.2.3
+;;;monitor_speed = 115200
+;;;monitor_filters = esp32_exception_decoder
 ;board_build.f_cpu = 80000000L
 ;board_build.f_cpu = 240000000L
 
 
-;;;[env:mhetesp32minikit-ota]
-;;;platform = espressif32
-;;;board = mhetesp32minikit
-;;;framework = arduino
-;;;board_build.partitions = mhetmini.csv
+[env:mhetesp32minikit-ota]
+platform = espressif32
+board = mhetesp32minikit
+framework = arduino
+board_build.partitions = mhetmini.csv
 
-;;;lib_deps =
-;;;     https://github.com/me-no-dev/ESPAsyncWebServer.git
-;;;     bblanchon/ArduinoJson@^6.19.4
-;;;    https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+lib_deps =
+     https://github.com/me-no-dev/ESPAsyncWebServer.git
+     bblanchon/ArduinoJson@^6.19.4
+    https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+    https://github.com/pschatzmann/arduino-audio-tools
+
+    AudioFFTTools
  ;;;;;;   witnessmenow/UniversalTelegramBot@^1.3.0
-;;;    cotestatnt/AsyncTelegram2@^2.2.3
-;;;monitor_speed = 115200
-;;;extra_scripts = upload.py
-;;; = custom
-;;;upload_url = http://192.168.1.94/update
+    cotestatnt/AsyncTelegram2@^2.2.3
+monitor_speed = 115200
+extra_scripts = upload.py
+upload_protocol = custom
+upload_url = http://192.168.1.94/update
+;;upload_url = http://192.168.1.115/update
