--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,8 @@
 
 [env:mhetesp32minikit-ota]
 platform = espressif32
+;;platform = https://github.com/platformio/platform-espressif32.git
+
 board = mhetesp32minikit
 framework = arduino
 board_build.partitions = mhetmini.csv
@@ -36,13 +38,19 @@ lib_deps =
      https://github.com/me-no-dev/ESPAsyncWebServer.git
      bblanchon/ArduinoJson@^6.19.4
     https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-    https://github.com/pschatzmann/arduino-audio-tools
+    ;; my fork for test purpose https://github.com/MauiKano/arduino-audio-tools
+    https://github.com/pschatzmann/arduino-audio-tools.git
 
-    AudioFFTTools
  ;;;;;;   witnessmenow/UniversalTelegramBot@^1.3.0
     cotestatnt/AsyncTelegram2@^2.2.3
+
+build_flags = -DCORE_DEBUG_LEVEL=5 -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-function -Wno-format-extra-args 
 monitor_speed = 115200
 extra_scripts = upload.py
-upload_protocol = custom
-upload_url = http://192.168.1.94/update
-;;upload_url = http://192.168.1.115/update
+;upload_protocol = custom
+;anna
+;upload_url = http://192.168.1.94/update 
+; meine
+;upload_url = http://192.168.1.174/update  
+; fisken
+upload_url = http://192.168.1.115/update 
