--- a/platformio.ini
+++ b/platformio.ini
@@ -47,10 +47,13 @@ lib_deps =
 build_flags = -DCORE_DEBUG_LEVEL=5 -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-function -Wno-format-extra-args 
 monitor_speed = 115200
 extra_scripts = upload.py
+;board_build.f_cpu = 80000000L
+board_build.f_cpu = 240000000L
+
 ;upload_protocol = custom
 ;anna
 ;upload_url = http://192.168.1.94/update 
 ; meine
-;upload_url = http://192.168.1.174/update  
+upload_url = http://192.168.1.174/update  
 ; fisken
-upload_url = http://192.168.1.115/update 
+;upload_url = http://192.168.1.115/update 
