--- a/platformio.ini
+++ b/platformio.ini
@@ -7,53 +7,21 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-; format changes
-
-;;;[env:mhetesp32minikit]
-;;;platform = espressif32
-;;;board = mhetesp32minikit
-;;;framework = arduino
-;board_build.partitions = minimal.csv
-;;;board_build.partitions = mhetmini.csv
-;;;lib_deps =
-;;;       https://github.com/me-no-dev/ESPAsyncWebServer.git
-;;;       bblanchon/ArduinoJson@^6.19.4
-;;;       https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-;;;       cotestatnt/AsyncTelegram2@^2.2.3
-;;;monitor_speed = 115200
-;;;monitor_filters = esp32_exception_decoder
-;board_build.f_cpu = 80000000L
-;board_build.f_cpu = 240000000L
-
 
 [env:mhetesp32minikit-ota]
 platform = espressif32
-;;platform = https://github.com/platformio/platform-espressif32.git
-
 board = mhetesp32minikit
 framework = arduino
 board_build.partitions = mhetmini.csv
-
-lib_deps =
-     https://github.com/me-no-dev/ESPAsyncWebServer.git
-     bblanchon/ArduinoJson@^6.19.4
-    https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-    ;; my fork for test purpose https://github.com/MauiKano/arduino-audio-tools
-    https://github.com/pschatzmann/arduino-audio-tools.git
-
- ;;;;;;   witnessmenow/UniversalTelegramBot@^1.3.0
-    cotestatnt/AsyncTelegram2@^2.2.3
-
-build_flags = -DCORE_DEBUG_LEVEL=5 -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-function -Wno-format-extra-args 
+lib_deps = 
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	bblanchon/ArduinoJson@^6.19.4
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+	https://github.com/pschatzmann/arduino-audio-tools.git
+	cotestatnt/AsyncTelegram2@^2.2.3
+	adafruit/RTClib@^2.1.3
+build_flags = -DCORE_DEBUG_LEVEL=5 -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-function -Wno-format-extra-args
 monitor_speed = 115200
 extra_scripts = upload.py
-;board_build.f_cpu = 80000000L
 board_build.f_cpu = 240000000L
-
-;upload_protocol = custom
-;anna
-;upload_url = http://192.168.1.94/update 
-; meine
-upload_url = http://192.168.1.174/update  
-; fisken
-;upload_url = http://192.168.1.115/update 
+upload_url = http://192.168.1.174/update
