--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,6 @@ lib_deps =
 	adafruit/RTClib@^2.1.3
 build_flags = -DCORE_DEBUG_LEVEL=5 -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-function -Wno-format-extra-args
 monitor_speed = 115200
-extra_scripts = upload.py
+;;;;extra_scripts = upload.py
 board_build.f_cpu = 240000000L
-upload_url = http://192.168.1.174/update
+;;;;upload_url = http://192.168.1.174/update
