--- a/platformio.ini
+++ b/platformio.ini
@@ -24,5 +24,5 @@ build_flags = -DCORE_DEBUG_LEVEL=5 -Wno-unused-variable -Wno-unused-but-set-vari
 monitor_speed = 115200
 board_build.f_cpu = 240000000L
 extra_scripts = upload.py
-upload_url = http://192.168.1.94/update   // big panel
-;;;;upload_url = http://192.168.1.174/update  // small box
+;;;upload_url = http://192.168.1.94/update   // big panel
+upload_url = http://192.168.1.115/update  // small box
