--- a/platformio.ini
+++ b/platformio.ini
@@ -20,9 +20,13 @@ lib_deps =
 	https://github.com/pschatzmann/arduino-audio-tools.git
 	cotestatnt/AsyncTelegram2@^2.2.3
 	adafruit/RTClib@^2.1.3
+	adafruit/Adafruit BMP280 Library
+	adafruit/Adafruit Unified Sensor
+	adafruit/Adafruit AHTX0@^2.0.5
 build_flags = -DCORE_DEBUG_LEVEL=5 -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-function -Wno-format-extra-args
 monitor_speed = 115200
 board_build.f_cpu = 240000000L
 extra_scripts = upload.py
-;;;upload_url = http://192.168.1.94/update   // big panel
-upload_url = http://192.168.1.115/update  // small box
+upload_url = http://192.168.1.94/update
+upload_protocol = espota
+upload_port = 192.168.1.94
